Override inline height and width values of mx_MImageBody_thumbnail_container to avoid overflow
Include the block in mx_MImageBody in order to prevent unexpected style cascades

--- a/res/css/views/messages/_MImageBody.scss
+++ b/res/css/views/messages/_MImageBody.scss
@@ -54,6 +54,7 @@ $timeline-image-border-radius: 8px;
     }
 }
 
+.mx_MImageBody {
 .mx_MImageBody_thumbnail_container {
     border-radius: $timeline-image-border-radius;
 
@@ -66,6 +67,11 @@ $timeline-image-border-radius: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    // Override inline height and width values to avoid overflow
+    max-height: 100% !important;
+    max-width: 100% !important;
+}
 }
 
 .mx_MImageBody_thumbnail {
